# QT_SDL_FFMPEG

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  demo_1  demo_1.files  demo_1.includes  demo_1_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
demo_1_autogen/EWIEGA46WW/: moc_mainwindow.cpp
demo_1_autogen/include/: ui_mainwindow.h
